# Night-Light-Slider-Extension-Fork-for-Gnome-43

./: CONTRIBUTING.md  README.md  meson.build  package.json
ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
build-aux/: postinstall.py
data/: meson.build
night-light-slider.timur@linux.com/: metadata.json
po/: LINGUAS  POTFILES  ms.po  night-light-slider.timur@linux.com.pot  ru.po
src/: extension.js  meson.build  metadata.json.in  prefs.js  prefs.ui
